updating core crawler Lider